--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,41 @@
+body   
+{
+  background-color: #EAF6F6;
+}
+.picture:hover
+{
+  background-color: Gold;
+}
+
+.pad
+{
+  padding-left: 28px;
+}
+
+.dottedLine     
+{
+  border-style: none;
+  border-top-style: dotted;
+  border-color: grey;
+  border-width: 4px;
+  width: 6%;
+}
+
+#adddotted   
+{
+  border-style: none;   
+  border-top-style: dotted;
+  border-color: grey;
+  border-width: 4px;
+  width: 6%;
+
+}
+h1
+{
+  color:  #66BFBF;
+}
+h3
+{
+  color: #66BFBF;
+}
 
